--- a/Main.storyboard
+++ b/Main.storyboard
@@ -3,6 +3,7 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -16,30 +17,112 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TSK-rj-hXl">
-                                <rect key="frame" x="164" y="244" width="87" height="56"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Home" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2rz-2D-mgg">
+                                <rect key="frame" x="155" y="100" width="104" height="32"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Screen Shot 2021-12-06 at 5.18.28 PM" translatesAutoresizingMaskIntoConstraints="NO" id="JID-8B-zWq">
+                                <rect key="frame" x="19" y="287" width="375" height="323"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TSK-rj-hXl">
+                                <rect key="frame" x="97" y="771" width="219" height="33"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="filled" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled" title="Go To Scheduling">
+                                    <fontDescription key="titleFontDescription" style="UICTFontTextStyleTitle1"/>
+                                </buttonConfiguration>
                                 <connections>
                                     <segue destination="BB3-zj-D84" kind="show" id="h5y-7A-QPZ"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="View 1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2rz-2D-mgg">
-                                <rect key="frame" x="164" y="139" width="49" height="21"/>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kCb-ms-PNj">
+                                <rect key="frame" x="302" y="831" width="78" height="31"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="gray" title="Settings">
+                                    <color key="baseForegroundColor" systemColor="labelColor"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <segue destination="GiA-fe-g8H" kind="show" id="AMW-Xd-z19"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" name="AccentColor"/>
                     </view>
+                    <connections>
+                        <outlet property="logo" destination="JID-8B-zWq" id="P3Z-wr-H5I"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="18.840579710144929" y="70.982142857142847"/>
+        </scene>
+        <!--Stats-->
+        <scene sceneID="UQ2-oZ-F6G">
+            <objects>
+                <viewController title="Stats" id="GiA-fe-g8H" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="v9Q-I4-IF8">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Height(inches)" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mLf-BU-X9E">
+                                <rect key="frame" x="55" y="160" width="272" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZX6-7o-3vr">
+                                <rect key="frame" x="191" y="327" width="0.0" height="64"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="64" id="YL7-4D-xQq"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oHy-dU-idA">
+                                <rect key="frame" x="149" y="225" width="84.5" height="31"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="tinted" title="Calculate">
+                                    <color key="baseBackgroundColor" systemColor="systemGreenColor"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="calcbmi:" destination="tIU-cN-zWI" eventType="touchUpInside" id="gqW-6D-UkV"/>
+                                </connections>
+                            </button>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="CtT-4a-ga3">
+                                <rect key="frame" x="55" y="95" width="272" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="9eq-Xs-kxQ"/>
+                        <constraints>
+                            <constraint firstItem="ZX6-7o-3vr" firstAttribute="centerX" secondItem="mLf-BU-X9E" secondAttribute="centerX" id="4tg-yu-CGd"/>
+                            <constraint firstItem="CtT-4a-ga3" firstAttribute="top" secondItem="9eq-Xs-kxQ" secondAttribute="top" constant="95" id="OD7-iy-uAJ"/>
+                            <constraint firstItem="mLf-BU-X9E" firstAttribute="top" secondItem="CtT-4a-ga3" secondAttribute="bottom" constant="31" id="Tnw-tY-6uc"/>
+                            <constraint firstItem="CtT-4a-ga3" firstAttribute="leading" secondItem="9eq-Xs-kxQ" secondAttribute="leading" constant="55" id="VHg-dI-HHL"/>
+                            <constraint firstItem="ZX6-7o-3vr" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="9eq-Xs-kxQ" secondAttribute="leading" id="cP8-R0-p0N"/>
+                            <constraint firstItem="9eq-Xs-kxQ" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="ZX6-7o-3vr" secondAttribute="trailing" id="hK6-2H-sGf"/>
+                            <constraint firstItem="9eq-Xs-kxQ" firstAttribute="bottom" secondItem="ZX6-7o-3vr" secondAttribute="bottom" constant="417" id="lc3-4u-Me5"/>
+                            <constraint firstItem="ZX6-7o-3vr" firstAttribute="centerX" secondItem="CtT-4a-ga3" secondAttribute="centerX" id="m8H-b6-X0C"/>
+                            <constraint firstItem="ZX6-7o-3vr" firstAttribute="top" secondItem="oHy-dU-idA" secondAttribute="bottom" constant="71" id="rKv-tz-wq6"/>
+                            <constraint firstItem="CtT-4a-ga3" firstAttribute="leading" secondItem="mLf-BU-X9E" secondAttribute="leading" id="vap-1a-FZb"/>
+                            <constraint firstItem="9eq-Xs-kxQ" firstAttribute="trailing" secondItem="CtT-4a-ga3" secondAttribute="trailing" constant="87" id="xG0-if-W4n"/>
+                            <constraint firstItem="ZX6-7o-3vr" firstAttribute="centerX" secondItem="oHy-dU-idA" secondAttribute="centerX" id="xgv-14-mzp"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="n6V-23-XpQ"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="TUO-LF-GUg" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <exit id="tIU-cN-zWI" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="-13.043478260869566" y="803.57142857142856"/>
         </scene>
         <!--Workout selection-->
         <scene sceneID="CzL-Rg-Xck">
@@ -49,7 +132,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Add workout..." borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="NBK-Um-uV8">
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Weight" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="NBK-Um-uV8">
                                 <rect key="frame" x="20" y="68" width="374" height="34"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -87,6 +170,12 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Height" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="tFt-IS-XnX">
+                                <rect key="frame" x="64" y="386" width="244" height="34"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="aeF-ND-5gv"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -95,6 +184,7 @@
                     <connections>
                         <outlet property="Label2_Controller2" destination="igf-1R-B6a" id="ZSj-vx-YTa"/>
                         <outlet property="Text_field_controller2" destination="NBK-Um-uV8" id="hyZ-ey-NVW"/>
+                        <outlet property="height" destination="tFt-IS-XnX" id="JyS-6h-g7e"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gCM-qp-RJb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -122,8 +212,18 @@
         </scene>
     </scenes>
     <resources>
+        <image name="Screen Shot 2021-12-06 at 5.18.28 PM" width="1380" height="1382"/>
+        <namedColor name="AccentColor">
+            <color red="0.0" green="0.46000000000000002" blue="0.89000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGreenColor">
+            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
